fix overflow

--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ body {
   margin: 0;
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
 }
 
 section {
@@ -239,8 +240,10 @@ nav {
 
 header {
   background-image: url(images/splash_v6_2560x1080_test.svg);
-  height: 90.3vh;
-  width: 100%;
+
+  width: 100vw;
+  height: 100vh;
+  max-width: 100%;
   background-position: 79% 50%;
   background-repeat: no-repeat;
   background-size: cover;
